CRUD apis for customer + html template to display and add customer list
CRUD apis for customer + html template to display and add customer list

--- a/src/main/webapp/angular/src/app/components/customer/customer.component.html
+++ b/src/main/webapp/angular/src/app/components/customer/customer.component.html
@@ -1,12 +1,70 @@
-<h1>Welcome to Customer page!</h1>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-<table>
-  <tbody>
-    <tr *ngFor="let customer of customers">
-      <td>{{customer.firstName}}</td>
-      <td>{{customer.lastName}}</td>
-      <td>{{customer.email}}</td>
-      <td>{{customer.age}}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="container">
+    <div class="jumbotron">
+        <h1>Welcome to Customer Profiles!</h1>
+    </div>
+  
+    <div class="table-responsive">
+    <table class="table table-striped">
+      
+        <thead>
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email </th>
+            <th>View </th>
+            <th>Edit </th>
+            <th>Delete </th>
+          </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let customer of customers">
+          <td>{{customer.firstName}}</td>
+          <td>{{customer.lastName}}</td>
+          <td>{{customer.email}}</td>
+          <td><a href="">View</a></td>
+          <td><a href="">Edit</a></td>
+          <td><a href="">Delete</a></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="container">
+    <h2>Add New Customer</h2><br/>
+
+    <form class="form-horizontal">
+        <div class="form-group">
+          <label class="control-label col-sm-2" for="firstName">FirstName:</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="firstName" placeholder="Enter FirstName">
+          </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="lastName">LastName:</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="lastName" placeholder="Enter LastName">
+            </div>
+          </div>
+          <div class="form-group">
+              <label class="control-label col-sm-2" for="email">Email:</label>
+              <div class="col-sm-10">
+                <input type="email" class="form-control" id="email" placeholder="Enter Email">
+              </div>
+            </div>
+           
+        <div class="form-group"> 
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Submit</button>
+          </div>
+        </div>
+      </form>
+
+  </div>
+
+
+
